# PSDApp

./: .gitignore  Cargo.toml  README.md  build.ts  deno.json  index.html  manifest.webmanifest  tailwind.config.js  tailwind.preview.config.js
.cargo/: config.toml
.github/workflows/: deploy.yml
crates/psdapp/: Cargo.toml
crates/psdapp/src/: error.rs  lib.rs
crates/psdapp/src/interop/: mod.rs  psd_group_props.rs  psd_layer_props.rs
preview/: build.ts  index.html
preview/src/: App.tsx  ResizeBox.tsx  index.css
public/: manifest.json  manifest.webmanifest
src/: App.tsx  index.css  index.html  index.tsx  service.worker.ts
src-ui/: App.tsx  index.html
src-worker/: worker.js
src/@types/: preact-router.d.ts
src/components/: Button.tsx  Loading.tsx  Partitioned.tsx  Progress.tsx  Switcher.tsx  TriggerInput.tsx
src/hooks/: useSelection.ts
src/layout/: default.tsx
src/layouts/: default.tsx
src/lib/: psd.ts  psd.worker.ts  switcher.ts
src/lib/utils/: mod.ts
src/pages/: Home.tsx  PSDView.tsx
src/pages/Home/: Credit.tsx  Credits.tsx  mod.tsx
src/pages/PSDView/: Header.tsx  PSDCanvas.tsx  PSDCanvasArea.tsx  PSDCanvasPane.tsx  PSDCanvasPaneFooter.tsx  PSDCanvasPaneHeader.tsx  PSDCanvasProps.tsx  PSDStructureView.tsx  mod.tsx
src/types/: generatedFiles.d.ts  meta.d.ts
