[package]
name = "psdapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = "0.2"
psd = "0.3"
once_cell = "1.19"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo = "0.11"
crossbeam = "0.8"
